# octodns-domeneshop

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
octodns_domeneshop/: __init__.py
script/: bootstrap  coverage  format  lint  live_test  test
tests/: test_octodns_provider_domeneshop.py
tests/config/: unit.tests.yaml
tests/fixtures/: domeneshop-domains.json  domeneshop-forwards.json  domeneshop-records.json
