[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octodns-domeneshop"
version = "0.9.0"
description = "Domeneshop provider for octoDNS"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Audun Ytterdal", email = "audun@ytterdal.net"},
]
dependencies = [
    "octodns>=1.5.0",
    "requests>=2.27.0",
]
urls = {Homepage = "https://github.com/auduny/octodns-domeneshop"}

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-network",
    "requests_mock",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-network",
    "requests_mock",
    "black>=24.3.0,<25.0.0",
    "build>=0.7.0",
    "isort>=5.11.5",
    "pyflakes>=2.2.0",
    "readme_renderer[md]>=26.0",
    "twine>=3.4.2",
]

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
